--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://Priy-ansh-jain.github.io/quote_genrator.git",
   "name": "my_api",
   "version": "0.1.0",
   "private": true,
